--- a/examples/Lecture29/after/index.html
+++ b/examples/Lecture29/after/index.html
@@ -11,6 +11,8 @@
   </head>
 <body>
 
+  <p>Hello World!</p>
+
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
